# twins-baby

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Taskfile.yml  Trunk.toml  flake.nix  index.html  navigation-cube.20251109-172131.FCBak  navigation-cube.FCStd  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.css.js
.claude/skills/bevy-test/: SKILL.md
assets/: navigation-cube.gltf
e2e/: accordion.spec.ts  button.spec.ts
lib/cad-base/: Cargo.toml
lib/cad-base-macro/: Cargo.toml
lib/cad-base-macros/: Cargo.toml
lib/cad-base-macros/src/: lib.rs
lib/cad-base-macros/tests/: integration.rs
lib/cad-base/src/: arena.rs  edge.rs  id.rs  lib.rs  plane.rs  point.rs  tag.rs  transaction.rs  vector3d.rs
lib/cad-base/src/body/: mod.rs  tests.rs
lib/cad-base/src/feature/: mod.rs
lib/cad-base/src/feature/perspective/: mod.rs  tests.rs
lib/cad-base/src/plane/: mod.rs  tests.rs
lib/cad-base/src/refs/: face_ref.rs  mod.rs  plane_ref.rs  resolve.rs
lib/cad-base/src/sketch/: constraint.rs  edge.rs  geometry.rs  mod.rs  point2.rs  point2d.rs  propagation.rs  registrar.rs  scope.rs  tests.rs
lib/cad-base/src/sketch/perspective/: mod.rs  tests.rs
lib/cad-base/src/sketch/point2/: tests.rs
lib/cad-base/src/solid/: edge.rs  face.rs  mod.rs  vertex.rs
lib/cad-base/src/transaction/: core.rs  mod.rs  registry.rs  tests.rs
lib/cad-base/src/vector3/: mod.rs  tests.rs
lib/cad-base/src/vector3d/: mod.rs  tests.rs
lib/cad-kernel/: Cargo.toml
lib/cad-kernel/src/pad/: mod.rs  tests.rs
lib/cad-kernel/src/sketcher/: mod.rs  tests.rs
lib/cad_base/: Cargo.toml
lib/cad_base/src/: id.rs  lib.rs  plane.rs  point.rs
lib/cad_base/src/body/: mod.rs
lib/cad_base/src/feature/: mod.rs  operation.rs  perspective.rs
lib/cad_base/src/feature/perspective/: mod.rs
lib/cad_base/src/sketch/: constraint.rs  geometry.rs  mod.rs  point2.rs  scope.rs  tests.rs
lib/cad_base/src/sketch/perspective/: mod.rs  tests.rs
lib/cad_base/src/sketch/point2/: mod.rs  tests.rs
lib/cad_base/src/solid/: edge.rs  face.rs  mod.rs  perspective.rs  surface.rs  vertex.rs
lib/cad_base/src/transaction/: tests.rs
lib/cad_base/src/vector3/: mod.rs  tests.rs
lib/cad_base_macro/: Cargo.toml
lib/cad_base_macro/src/: lib.rs
lib/cad_kernel/: Cargo.toml
lib/cad_kernel/src/: lib.rs  pad.rs  sketcher.rs
lib/cad_kernel/src/pad/: mod.rs  tests.rs
lib/cad_kernel/src/sketcher/: graph.rs  mod.rs  tests.rs
lib/epsilon/: Cargo.toml
lib/epsilon/src/: lib.rs
lib/immutable/: Cargo.toml
lib/immutable/src/: lib.rs
lib/leptos-test/: Cargo.toml
lib/leptos-test/src/: lib.rs
lib/solver/: Cargo.toml
lib/solver/src/: environment.rs  lib.rs  variable.rs  vector.rs
lib/solver/src/equation/: arithmetic.rs  constant.rs  mod.rs  monomial.rs  ops.rs  parser.rs  power.rs  unary.rs  variable.rs
lib/solver/src/equation/parser/: mod.rs  tests.rs
lib/solver/src/matrix/: mod.rs  op.rs  pos.rs  rect.rs  simple.rs  size.rs  sparse.rs
lib/ui-component/: Cargo.toml
lib/ui-component/src/: accordion.rs  button.rs  icon.rs  lib.rs  select.rs
lib/ui-component/src/snapshots/: ui_component__accordion__tests__tree_accordion_default.snap  ui_component__accordion__tests__tree_accordion_initial_open.snap  ui_component__accordion__tests__tree_accordion_nested.snap  ui_component__button__tests__button_default.snap  ui_component__button__tests__button_disabled.snap  ui_component__button__tests__button_disabled_with_label.snap  ui_component__button__tests__button_with_icon.snap  ui_component__button__tests__button_with_icon_and_label.snap  ui_component__button__tests__button_with_label.snap  ui_component__button__tests__indicator_signal_off.snap  ui_component__button__tests__indicator_signal_on.snap  ui_component__button__tests__tool_button_default.snap  ui_component__button__tests__tool_button_disabled.snap  ui_component__button__tests__tool_button_indicator_off.snap  ui_component__button__tests__tool_button_indicator_prop_on.snap  ui_component__button__tests__tool_button_large_icon.snap  ui_component__button__tests__tool_button_small_icon.snap  ui_component__select__tests__select_box_default.snap  ui_component__select__tests__select_box_with_initial_selected.snap
lib/ui-event/: Cargo.toml
lib/ui-event-macros/: Cargo.toml
lib/ui-event-macros/src/: command.rs  intent.rs  lib.rs  notification.rs
lib/ui-event/src/: lib.rs  types.rs
lib/ui-event/src/command/: mod.rs
lib/ui-event/src/intent/: mod.rs
lib/ui-event/src/notification/: mod.rs
lib/ui-event/src/server/: mod.rs
lib/ui-fixtures/: Cargo.toml  Trunk.toml  index.html  input.css
lib/ui-fixtures/src/: accordion.rs  button.rs  main.rs  select.rs
lib/ui-headless/: Cargo.toml
lib/ui-headless/src/: accordion.rs  button.rs  lib.rs  select.rs
src/: bevy_app.rs  events.rs  leptos_app.rs  main.rs  resize_nob.rs  test_leptos.rs  use_resize.rs
src/bevy_app/: camera.rs  component.rs  keyboard.rs  mod.rs  mouse.rs  pan_orbit.rs  picking.rs  resize.rs  resource.rs  setup.rs  support.rs  test_support.rs  ui.rs
src/bevy_app/camera/: mod.rs  pan_orbit.rs  tests.rs
src/bevy_app/command/: body.rs  mod.rs  sketch.rs
src/bevy_app/command/body/: component.rs  event.rs  mod.rs  tests.rs
src/bevy_app/command/sketch/: component.rs  event.rs  geometry.rs  mod.rs  mouse_handler.rs  tests.rs
src/bevy_app/component/: body.rs  mod.rs  sketch.rs  ui.rs
src/bevy_app/keyboard/: mod.rs  tests.rs
src/bevy_app/mouse/: mod.rs  tests.rs
src/bevy_app/ui/: anchor.rs  components.rs  cursor.rs  gizmo.rs  mod.rs  navigation_cube.rs
src/leptos_app/: app_state.rs  canvas_mouse_handler.rs  command_sender.rs  message_hub.rs  mod.rs  resize_nob.rs  state.rs  test_leptos.rs  tool_command.rs  ui_action.rs  ui_events.rs  ui_state.rs  use_action.rs  use_notification.rs  use_perspective.rs  use_resize.rs  use_server_intent.rs
src/leptos_app/component/: feature_island.rs  info_island.rs  mod.rs  perspective_island.rs  sketch_island.rs  support_island.rs
src/leptos_app/component/perspective_island/: mod.rs  (+2 more)
(+12 files in other folders)
