[package]
name = "twins-baby"
version = "0.1.0"
edition = "2024"

[workspace]

members = [
   "lib/cad-base", "lib/cad-base-macro", "lib/cad-kernel", "lib/epsilon", "lib/immutable", "lib/leptos-test",
   "lib/solver"
, "lib/ui-component", "lib/ui-fixtures", "lib/ui-headless"]

[workspace.dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
rand = "0.9.2"
nom = "8.0.0"
enum_dispatch = "0.3.13"
color-eyre = "0.6.5"
thiserror = "2.0.18"
tracing = "0.1.44"

insta = "1.43.1"
leptos = { version = "0.8.16", features = ["csr"] }

# test only dependencies
futures-lite = { version = "2.6.0", default-features = false }
tokio = { version = "1.41", default-features = false, features = [
  "rt",
  "macros",
  "time",
] }
any_spawner = {version = "0.3.0", features = ["tokio"] }

[dependencies]
coarsetime = "0.1.36"
console_error_panic_hook = "0.1.7"
enum_dispatch.workspace = true
leptos.workspace = true
leptos-bevy-canvas = "0.5.0"

[dev-dependencies]
pretty_assertions.workspace = true
tokio.workspace = true
futures-lite.workspace = true
any_spawner.workspace = true
insta.workspace = true
leptos-test = { version = "0.1.0", path = "lib/leptos-test" }

[dependencies.bevy]
version = "0.18.0"
features = [
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_window",
    "bevy_winit",
    "tonemapping_luts",
    "webgpu",
]

# Optimize build performance
[profile.dev]
# Faster builds with less optimization in dev mode
opt-level = 1
# Reduce incremental compilation overhead
incremental = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for better runtime performance
opt-level = 2

[profile.release]
# Maximum optimization for production
opt-level = "z"  # Optimize for size (important for WASM)
lto = "thin"      # Link-time optimization (balance between build time and output size)
codegen-units = 1 # Better optimization, slower build
strip = true      # Strip debug symbols
panic = "abort"   # Smaller binary size

