[package]
name = "cad-base"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
epsilon = { version = "0.1.0", path = "../epsilon" }
rand.workspace = true
solver = { version = "0.1.0", path = "../solver" }
immutable = { version = "0.1.0", path = "../immutable" }

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
