[package]
name = "cad-base"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
epsilon = { version = "0.1.0", path = "../epsilon" }
rand.workspace = true
solver = { version = "0.1.0", path = "../solver" }
immutable = { version = "0.1.0", path = "../immutable" }
enum_dispatch.workspace = true
cad-base-macro = { version = "0.1.0", path = "../cad-base-macro" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
