[package]
name = "cad-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
cad-base = { version = "0.1.0", path = "../cad-base" }
color-eyre.workspace = true
enum_dispatch.workspace = true
epsilon = { version = "0.1.0", path = "../epsilon" }
solver = { version = "0.1.0", path = "../solver" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
