[package]
name = "cad_base"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
epsilon = { version = "0.1.0", path = "../epsilon" }
rand.workspace = true
solver = { version = "0.1.0", path = "../solver" }
immutable = { version = "0.1.0", path = "../immutable" }
enum_dispatch.workspace = true
cad_base_macro = { version = "0.1.0", path = "../cad_base_macro" }

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
