[package]
name = "cad_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
cad_base = { version = "0.1.0", path = "../cad_base" }
color-eyre.workspace = true
epsilon = { version = "0.1.0", path = "../epsilon" }
solver = { version = "0.1.0", path = "../solver" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
