[package]
name = "solver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
enum_dispatch.workspace = true
epsilon = { version = "0.1.0", path = "../epsilon" }
immutable = { version = "0.1.0", path = "../immutable" }
nom.workspace = true

[dev-dependencies]
approx.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
