[package]
name = "ui-event"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
cad-base = { version = "0.1.0", path = "../cad-base" }
color-eyre.workspace = true
enum_dispatch.workspace = true
immutable = { version = "0.1.0", path = "../immutable" }
ui-event-macros = { version = "0.1.0", path = "../ui-event-macros" }
tracing.workspace = true
cad-base-macros = { version = "0.1.0", path = "../cad-base-macros" }
